...
                ZStack {

                    background()
                        .shadow(radius: 8, y: -8)

                    HStack {
                        button(image: "star.fill", name: "Competitions", page: 1)
                        button(image: "person.3.fill", name: "Teams", page: 2)
                        button(image: "gearshape.fill", name: "Settings", page: 3)
                    }

                }

...
