...
                Text("REQUIRED")
                    .font(.caption)
                    .foregroundColor(.secondary)
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .padding(.top, 32)
                GroupBox {
                    TextField("Name", text: $username) { didChange in
                        print(didChange)
                    } onCommit: {
                        print("Commited")
                    }
                }
                GroupBox {
...
                    .font(.caption)
                    .foregroundColor(.secondary)
                    .frame(maxWidth: .infinity, alignment: .leading)
            }
            Spacer()
            RoundedNavigationLink(
                "Continue", destination: OnboardingGrantDataAccessView(showOnboarding: $showOnboarding)
            )
        }
        .padding(.horizontal)
        .navigationTitle("Sign Up")
    }
}
...
